--- a/templates/Books/selectRoute.html
+++ b/templates/Books/selectRoute.html
@@ -101,16 +101,33 @@
             </section>
         </section>
         <section id="to_fit_top_header"></section>
-        <form action="#" method="post">
-            {% csrf_token %}
-            {{ route_form|crispy }}
-        </form>
+        <div class="col-sm-6 addBookContainer">
+            <h3 class="mt-5">Select book, starting and destination stations:</h3>
+            <form class="mt-4" action="#" method="post">
+                {% csrf_token %}
+                {{ route_form|crispy }}
+                <button class="btn btn-primary mx-auto d-block mt-5" type="submit">Find books in route!</button>
+            </form>
+            <div class="line mt-5"></div>
+            <h3 class="mt-2 mb-2 w-50 container text-center">Results</h3>
+            {% for station in stations %}
+            <div class="options_list_on_seacrh">
+                <img name='{{ book.bookname }}' src='{{ book.imageURL }}'></img>
+                <div class='search_list_text'><div class='font-weight-bold text-white text-left'>{{ book.bookname }}</div>
+                <div class='font-weight-light text-white'>{{ book.author }}</div>
+                <div class='font-weight-light text-white'>{{ station }}</div>
+            </div>
+            </div>
+
+            {% endfor %}
+
+        </div>
         <section class="to_fit_button_nav"></section>
     </main>
     <footer class="bg-secondary">
-        <a class="a_footer" href=""><span><i class="fas fa-route"></i>Route</span></a>
+        <a class="a_footer" href=""><span class="wheatColor"><i class="fas fa-route wheatColor"></i>Route</span></a>
         <a class="a_footer" href="{% url 'add_book' %}"><span><i class="fas fa-plus"></i>Add</span></a>
-        <a class="a_footer" href=""><span class="wheatColor"><i  class="fas fa-home wheatColor" ></i>Home</span></a>
+        <a class="a_footer" href="{% url 'homepage' %}"><span ><i  class="fas fa-home " ></i>Home</span></a>
         <a id="button-nav-search" class="a_footer"><span><i class="fas fa-search"></i>Search</span></a>
     </footer>
     <script src="{% static 'Books/js/index_scripts.js' %}"></script>
