--- a/templates/Books/addbook.html
+++ b/templates/Books/addbook.html
@@ -285,7 +285,7 @@
         <section class="to_fit_button_nav"></section>
     </main>
     <footer class="bg-secondary">
-        <a class="a_footer" href=""><span><i class="fas fa-route"></i>Route</span></a>
+        <a class="a_footer" href="{% url 'selectRoute' %}"><span><i class="fas fa-route"></i>Route</span></a>
         <a class="a_footer" href=""><span class="wheatColor"><i class="fas fa-plus wheatColor"></i>Add</span></a>
         <a class="a_footer" href="{% url 'homepage' %}"><span><i class="fas fa-home"></i>Home</span></a>
         <a id="button-nav-search" class="a_footer"><span><i class="fas fa-search"></i>Search</span></a>
