--- a/templates/Books/user.html
+++ b/templates/Books/user.html
@@ -57,7 +57,6 @@
                 </li>
             </ul>
 
-            <!-- Tab panes -->
             <div class="tab-content">
                 <div class="tab-pane fade show active" id="loans" role="tabpanel" aria-labelledby="loans-tab">
                     <ul class="list-unstyled mt-4 ml-4">
@@ -107,7 +106,7 @@
     <footer class="bg-secondary">
         <a class="a_footer" href=""><span><i class="fas fa-route"></i>Route</span></a>
         <a class="a_footer" href="{% url 'add_book' %}"><span><i class="fas fa-plus"></i>Add</span></a>
-        <a class="a_footer" href=""><span class="wheatColor"><i class="fas fa-home wheatColor"></i>Home</span></a>
+        <a class="a_footer" href="/"><span class="wheatColor"><i class="fas fa-home wheatColor"></i>Home</span></a>
         <a id="button-nav-search" class="a_footer"><span><i class="fas fa-search"></i>Search</span></a>
     </footer>
     <script src="{% static 'Books/js/index_scripts.js' %}"></script>
