--- a/templates/Books/index.html
+++ b/templates/Books/index.html
@@ -30,7 +30,7 @@
                 <path fill-rule="evenodd" d="M8 9a3 3 0 100-6 3 3 0 000 6z" clip-rule="evenodd"/>
                 <path fill-rule="evenodd" d="M8 1a7 7 0 100 14A7 7 0 008 1zM0 8a8 8 0 1116 0A8 8 0 010 8z" clip-rule="evenodd"/>
               </svg>
-            <span id="full_name">{{ User_Name }}</span> 
+            <a href="/user" id="full_name">{{ User_Name }}</a> 
             <svg id="user_options" class="bi bi-caret-down-fill" width="1em" height="1em" viewBox="0 0 16 16" fill="currentColor" xmlns="http://www.w3.org/2000/svg">
                 <path d="M7.247 11.14L2.451 5.658C1.885 5.013 2.345 4 3.204 4h9.592a1 1 0 01.753 1.659l-4.796 5.48a1 1 0 01-1.506 0z"/>
               </svg>
@@ -127,41 +127,10 @@
     <footer class="bg-secondary">
         <a class="a_footer" href="{% url 'selectRoute' %}"><span><i class="fas fa-route"></i>Route</span></a>
         <a class="a_footer" href="{% url 'add_book' %}"><span><i class="fas fa-plus"></i>Add</span></a>
-        <a class="a_footer" href=""><span class="wheatColor"><i  class="fas fa-home wheatColor" ></i>Home</span></a>
+        <a class="a_footer" href="/"><span class="wheatColor"><i  class="fas fa-home wheatColor" ></i>Home</span></a>
         <a id="button-nav-search" class="a_footer"><span><i class="fas fa-search"></i>Search</span></a>
     </footer>
     <script src="{% static 'Books/js/index_scripts.js' %}"></script>
     <script src="{% static 'Books/js/scripts.js' %}"></script>
 </body>
-</html> 
-
-
-<!--
-    <div class="fullscreen">
-        <svg class='bi bi-x close-button-book-page' width='1em' height='1em' viewBox='0 0 16 16' fill='currentColor' xmlns='http://www.w3.org/2000/svg'> <path fill-rule='evenodd' d='M11.854 4.146a.5.5 0 0 1 0 .708l-7 7a.5.5 0 0 1-.708-.708l7-7a.5.5 0 0 1 .708 0z'/><path fill-rule='evenodd' d='M4.146 4.146a.5.5 0 0 0 0 .708l7 7a.5.5 0 0 0 .708-.708l-7-7a.5.5 0 0 0-.708 0z'/></svg>
-        <div class="book_page_container">
-            <img class="book-page-image" src="" alt="">
-            <span></span>
-            <div id="loan_now_flip" class="flip">
-                <i class="fas fa-book"></i><span>Loan Now</span>
-            </div>
-            <div id="loan_now_panel" class="panel">
-                <i class="fas fa-map-marker-alt"></i><span>Savidor-Center Tel Aviv</span>
-                <a href="">Change?</a>
-                <i id="confirm_loan_now" class="fas fa-check-circle"></i>
-            </div>
-            <div id="read_a_sample_flip" class="flip">
-                <i class="fas fa-search-plus"></i><span>Read a sample</span>
-            </div>
-            <div id="read_a_sample_panel" class="panel">
-                <p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam feugiat consequat pretium. Mauris ac lectus tortor. Maecenas consectetur volutpat imperdiet. Pellentesque venenatis interdum iaculis. Sed lectus ligula, sodales id sodales vel, ullamcorper rhoncus nisl. Aenean non vestibulum nibh. Ut vel mollis nunc. Pellentesque a ultrices arcu. Aliquam ex nunc, ultrices et imperdiet ut, maximus ut ex. Quisque congue sem est, non auctor arcu condimentum eu. Maecenas id urna purus. Nullam porttitor tempus congue.
-
-                    Quisque viverra augue sit amet aliquet hendrerit. Ut vel ligula lectus. Sed commodo aliquet lorem. Vestibulum sollicitudin pharetra blandit. Donec accumsan pretium euismod. Morbi vel purus dui.</p>
-                    
-            </div>
-            <div id="add_to_wishlist" class="flip">
-                <i class="fas fa-heart"></i><span>Add to wishlist</span>
-            </div>
-        </div>
-    </div>
--->
+</html>
