--- a/templates/Books/addbook.html
+++ b/templates/Books/addbook.html
@@ -144,7 +144,7 @@
         <section id="to_fit_top_header"></section>
         <div class="col-sm-6 addBookContainer">
             <div class="mt-2">{{ errMsg }}</div>
-            <form  class="mt-5 mb-5" action="#" method="post">
+            <form  class="mt-5 mb-5" action="#" method="post" enctype="multipart/form-data">
                 {% csrf_token %}
                 {{ station_form|crispy }}
                 {{ book_form|crispy }}
